fix type item overflow

--- a/source/sass/blocks/type-list.scss
+++ b/source/sass/blocks/type-list.scss
@@ -49,91 +49,15 @@
   &--road {
     z-index: 0;
 
-    &::before {
-      box-sizing: border-box;
-      content: '';
-      position: absolute;
-      top: 155px;
-      left: -60px;
-      width: 180px;
-      height: 180px;
-      border: 27px solid $style-color;
-      border-radius: 50%;
-      z-index: -1;
-
-      @media (max-width: $tablet-width) {
-        width: 127px;
-        height: 127px;
-        border-width: 18px;
-        top: auto;
-        bottom: 26px;
-        left: -37px;
-      }
-
-      @media (max-width: $mobile-width) {
-        left: -25px;
-      }
-    }
-
     @media (max-width: $tablet-width) {
       margin-top: 0;
     }
   }
 
   &--mountain {
-    &::before,
-    &::after {
-      box-sizing: border-box;
-      content: '';
-      position: absolute;
-      width: 47px;
-      height: 47px;
-      border: 8px solid $style-color;
-
-      @media (max-width: $tablet-width) {
-        display: none;
-      }
-    }
-
-    &::before {
-      top: -18px;
-      left: -19px;
-    }
-
-    &::after {
-      bottom: 31px;
-      right: -23px;
-    }
 
     @media (max-width: $tablet-width) {
       margin-top: 0;
-    }
-  }
-
-  &--children {
-    &::after {
-      box-sizing: border-box;
-      content: '';
-      position: absolute;
-      width: 95px;
-      height: 95px;
-      top: -32px;
-      right: -36px;
-      border: 17px solid $style-color;
-      border-radius: 50%;
-      z-index: 1;
-
-      @media (max-width: $tablet-width) {
-        width: 68px;
-        height: 68px;
-        top: -20px;
-        right: -25px;
-        border-width: 13px;
-      }
-
-      @media (max-width: $mobile-width) {
-        right: -16px;
-      }
     }
   }
 }
@@ -147,6 +71,32 @@
     width: 270px;
     height: 300px;
   }
+
+  &::before {
+    box-sizing: border-box;
+    content: '';
+    position: absolute;
+    top: 155px;
+    left: -60px;
+    width: 180px;
+    height: 180px;
+    border: 27px solid $style-color;
+    border-radius: 50%;
+    z-index: -1;
+
+    @media (max-width: $tablet-width) {
+      width: 127px;
+      height: 127px;
+      border-width: 18px;
+      top: auto;
+      bottom: 26px;
+      left: -37px;
+    }
+
+    @media (max-width: $mobile-width) {
+      left: -25px;
+    }
+  }
 }
 
 .type-list__item--mountain .type-list__item-picture {
@@ -158,6 +108,30 @@
     width: 270px;
     height: 300px;
   }
+
+  &::before,
+  &::after {
+    box-sizing: border-box;
+    content: '';
+    position: absolute;
+    width: 47px;
+    height: 47px;
+    border: 8px solid $style-color;
+
+    @media (max-width: $tablet-width) {
+      display: none;
+    }
+  }
+
+  &::before {
+    top: -18px;
+    left: -19px;
+  }
+
+  &::after {
+    bottom: 31px;
+    right: -23px;
+  }
 }
 
 .type-list__item--children .type-list__item-picture {
@@ -168,6 +142,31 @@
   @media (max-width: $tablet-width) {
     width: 270px;
     height: 300px;
+  }
+
+  &::after {
+    box-sizing: border-box;
+    content: '';
+    position: absolute;
+    width: 95px;
+    height: 95px;
+    top: -32px;
+    right: -36px;
+    border: 17px solid $style-color;
+    border-radius: 50%;
+    z-index: 1;
+
+    @media (max-width: $tablet-width) {
+      width: 68px;
+      height: 68px;
+      top: -20px;
+      right: -25px;
+      border-width: 13px;
+    }
+
+    @media (max-width: $mobile-width) {
+      right: -16px;
+    }
   }
 }
 
